kubernetes/auth/auth.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: auth
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: kubernetes-microservices
            app.kubernetes.io/component: auth
    template:
        metadata:
            labels:
                app.kubernetes.io/name: kubernetes-microservices
                app.kubernetes.io/component: auth
        spec:
            containers:
                -   name: auth
                    image: alexgudkov/kubernetes-microservices-auth
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   name: port-auth
                            containerPort: 3001
                    resources:
                        limits:
                            memory: 512Mi
                            cpu: 250m
                        requests:
                            memory: 512Mi
                            cpu: 250m
            restartPolicy: Always
