kubernetes/auth/auth.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-microservices
      app.kubernetes.io/component: auth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: auth
    spec:
      containers:
        - name: auth
          image: registry.gitlab.com/alex-gudkov/kubernetes-microservices/auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              # amount of RAM for executing processes
              memory: 2Gi
              # amount of storage used for caching, buffering, temporary files allocation
              ephemeral-storage: 1Gi
              # amount of given computing power
              cpu: 500m
            limits:
              memory: 2Gi
              ephemeral-storage: 1Gi
              cpu: 500m
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
