kubernetes/auth/auth.service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: auth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: auth
  ports:
    - protocol: TCP
      # port to be exposed
      port: 3001
      # port to containerPort from deployment specification
      targetPort: 3001
